# ritual

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_exe.py  docker-compose.yml  pyproject.toml  requirements.txt  ritual_quick_patch.py  setup.bat  setup.py  setup_mcm_portal.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: deploy.yml  docs.yml  lint.yml  quality.yml  test.yml  tests.yml
config/: default-config.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  CUSTOMIZATION.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  USAGE.md  _config.yml  index.html  nav.html  style.css
docs/examples/: example-mcm.json
docs/images/: README.md
src/: __init__.py
src/backend/: __init__.py  main.py
src/backend/app/: __init__.py  auth.py  auth_routes.py  config.py  key_manager.py  llm_discovery.py  mcp.py  mcp_routes.py  mcp_storage.py  model_discovery.py  model_routes.py  model_runner.py  routes.py  server.py  storage.py
src/backend/tests/: __init__.py  test_config.py  test_llm_discovery.py  test_routes.py  test_storage.py
src/frontend/: app.js  index.html  style.css
